--- a/pmb.html
+++ b/pmb.html
@@ -19,7 +19,7 @@
     <!-- ========================= -->
     <div id="step1" class="center-box">
       <img
-        src="https://upload.wikimedia.org/wikipedia/id/4/45/Logo_UKSW.png"
+        src="img/logo.png"
         class="logo"
       />
 
@@ -207,3 +207,4 @@
     </script>
   </body>
 </html>
+
